objects/Permaleads_Visited_URL__mdt.object
<CustomObject>
    <fields>
        <fullName>UPC_Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                    <default>true</default>
                    <label>DE</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Permaleads_Visited_URL__c</fullName>
        <label>Permaleads Visited URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UPC_Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Mobile</fullName>
                    <default>true</default>
                    <label>Business Mobile</label>
                </value>
                <value>
                    <fullName>Business Internet</fullName>
                </value>
                <value>
                    <fullName>Business VPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Permaleads Visited URL</label>
    <pluralLabel>Permaleads Visited URLs</pluralLabel>
</CustomObject>